--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ dvt_build.txt
 xcelium.d
 xrun.log
 
-results\top_basys3.bit
-results\frame000.tif
-results\frame001.tif
-results\warning_summary.log
+results/top_basys3.bit
+results/frame000.tif
+results/frame001.tif
+results/warning_summary.log
